--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,8 @@
         </button>
     </div>
 
-<script src="static/js/firebase-config.js"></script>
-<script src="static/js/auth.js"></script>
+    <!-- FIX INI -->
+    <script type="module" src="static/js/firebase-config.js"></script>
+    <script type="module" src="static/js/auth.js"></script>
 </body>
 </html>
