Redesign dashboard layout and add gauge.js module
Refactored dashboard.html and dashboard.css for a cleaner, more modern layout with separate camera and gauge panels. Moved gauge rendering logic to a new gauge.js file and updated app.js accordingly. Improved gauge responsiveness and styling, and streamlined prediction log table markup.

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -4,65 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DragonEye Dashboard</title>
-
-    <!-- CSS -->
     <link rel="stylesheet" href="static/css/dashboard.css">
 </head>
 <body>
 
-    <!-- MAIN 50/50 LAYOUT -->
-    <div class="center-wrapper">
-
-        <!-- LEFT: CAMERA SECTION -->
-        <div class="camera-section">
-            <h3>Capture Image</h3>
-
-            <video id="camera" autoplay></video>
-
-            <button id="captureBtn" class="btn-primary">Capture</button>
+<section class="top">
+    <div class="camera-panel">
+        <div class="camera-box" id="cameraBox">
+            <video id="camera" autoplay playsinline></video>
         </div>
-
-        <!-- RIGHT: GRADE SECTION -->
-        <div class="grade-section">
-            <h3>Current Grade</h3>
-
-            <div class="gauge">
-                <svg class="gauge-svg" width="200" height="200">
-                    <circle class="gauge-bg" cx="100" cy="100" r="80"></circle>
-                    <circle class="gauge-progress" cx="100" cy="100" r="80"></circle>
-                </svg>
-
-                <div class="gauge-grade" id="gauge-grade">-</div>
-            </div>
-        </div>
-
+        <button id="captureBtn" class="btn">Capture</button>
     </div>
 
-    <!-- PREDICTION LOG -->
-    <div class="log-container">
-        <h3>Prediction Log</h3>
-
-        <div class="table-wrapper">
-            <table id="log-table">
-                <thead>
-                    <tr>
-                        <th>Time</th>
-                        <th>Grade</th>
-                        <th>Length</th>
-                        <th>Diameter</th>
-                        <th>Est.Weight</th>
-                        <th>Actual</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+    <div class="gauge-panel">
+        <div class="gauge-box" id="gaugeBox">
+            <svg id="gaugeSVG">
+                <circle id="gBg"></circle>
+                <circle id="gFill"></circle>
+            </svg>
+            <div class="gValue" id="gValue">-</div>
         </div>
     </div>
+</section>
 
-    <!-- JS -->
-    <script src="static/js/firebase-config.js"></script>
-    <script src="static/js/camera.js"></script>
-    <script src="static/js/app.js"></script>
+<section class="log-section">
+    <h3>Prediction Log</h3>
+    <div class="log-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Grade</th>
+                    <th>Length</th>
+                    <th>Diameter</th>
+                    <th>Est.Weight</th>
+                    <th>Actual</th>
+                </tr>
+            </thead>
+            <tbody id="logBody"></tbody>
+        </table>
+    </div>
+</section>
+
+<script src="static/js/camera.js"></script>
+<script src="static/js/app.js"></script>
 
 </body>
 </html>
