--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -30,7 +30,7 @@
 <section class="log-section">
     <h3>Prediction Log</h3>
     <div class="log-wrapper">
-        <table>
+        <table id="logTable">
             <thead>
                 <tr>
                     <th>Time</th>
@@ -46,8 +46,12 @@
     </div>
 </section>
 
-<script src="static/js/camera.js"></script>
-<script src="static/js/app.js"></script>
+<!-- Firebase MUST load first (module) -->
+<script type="module" src="static/js/firebase-config.js"></script>
+<script type="module" src="static/js/app.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+
 
 </body>
 </html>
