--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -48,6 +48,7 @@
 
 <!-- Firebase MUST load first (module) -->
 <script type="module" src="static/js/firebase-config.js"></script>
+<script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 <script type="module" src="static/js/app.js"></script>
 <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
